--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VITE_WEATHER_API_KEY=fd0c4a8f6ceec0799448486438b336a3
-VITE_WEATHER_API_URL=https://api.openweathermap.org/data/2.5
+VITE_WEATHER_API_KEY='fd0c4a8f6ceec0799448486438b336a3'
+VITE_WEATHER_API_URL='https://api.openweathermap.org/data/2.5'
 VITE_APP_NAME=Weather Dashboard
